2019-09-16  James Darpinian  <jdarpinian@chromium.org>

        Remove commit.h copying build steps
        https://bugs.webkit.org/show_bug.cgi?id=201785

        Reviewed by Alex Christensen.

        * ANGLE.xcodeproj/project.pbxproj: Remove leftover build step
        * CMakeLists.txt: Remove commit.h copying
        * src/common/version.h: Restore to upstream version
        * src/id/commit.h: Added.
        * update-angle.sh: Copy commit.h to id/commit.h at import time

2019-09-12  James Darpinian  <jdarpinian@chromium.org>

        Update ANGLE
        https://bugs.webkit.org/show_bug.cgi?id=201156

        Reviewed by Alex Christensen.

        Update to 2019-9-9, revision 79ad0411911b2fc84834c3705f55707be9e4b498
        I merged a bunch of changes to upstream ANGLE, to minimize the changes
        necessary when updating ANGLE in WebKit.

        * ANGLE.plist: Update commit hashes
        * ANGLE.txt: Removed in favor of LICENSE
        * ANGLE.xcodeproj/project.pbxproj: Updated with upstream changes
          Also, copy src/commit.h to id/commit.h during build
        * CMakeLists.txt: Updated with upstream changes
          Also, copy src/commit.h to id/commit.h during build
        * Compiler.cmake: Updated with upstream changes
        * GLESv2.cmake: Updated with upstream changes
        * adjust-angle-include-paths-rule: Support "" as well as <> for includes
        * adjust-angle-include-paths.sh: Support "" as well as <> for includes
        * changes.diff: Pared down to just legal disclaimer and warning flag changes
        * update-angle.sh: Update ANGLE.plist

        * Many other files modified/added/removed upstream

2019-09-11  Ryan Haddad  <ryanhaddad@apple.com>

        Unreviewed, rolling out r249791.

        Breaks internal production builds.

        Reverted changeset:

        "Update ANGLE"
        https://bugs.webkit.org/show_bug.cgi?id=201156
        https://trac.webkit.org/changeset/249791
